アクセスエンドポイントの追加
