# main.go
@@ -40,7 +40,7 @@ func main() {
 	// ルーティング
 	r.GET("/", controllers.GetTopPage)
 	r.GET("/families", controllers.GetFamilies)
-	// r.GET("/access", GetAccess)
+	r.GET("/access", controllers.GetAccessPage)
 	r.GET("/gallery", controllers.GetGalleryPhotos)
 
 	// サーバ起動
